--- a/src/app/company/bus/tracker/tracker.component.html
+++ b/src/app/company/bus/tracker/tracker.component.html
@@ -4,9 +4,9 @@
       Track
     </div>
     <div class="card-body">
-      <p>{{tracker.time}}</p>
-      <agm-map [latitude]="tracker.latitude" [longitude]="tracker.longitude">
-        <agm-marker [latitude]="tracker.latitude" [longitude]="tracker.longitude"></agm-marker>
+      <p>{{time}}</p>
+      <agm-map [latitude]="latitude" [longitude]="longitude">
+        <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
       </agm-map>
     </div>
   </div>
